force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Last_Case_Survey_Sent_Date__c</fullName>
        <description>The most recent date and time a Case follow up survey was sent to this Contact.</description>
        <inlineHelpText>The most recent date and time a Case follow up survey was sent to this Contact.</inlineHelpText>
        <label>Last Case Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_College_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Peoplesoft, or import] - Name of last college attended</description>
        <label>Last College Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Last College Attended)</relationshipLabel>
        <relationshipName>Contacts_HS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_HS_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Peoplesoft or import] - Name of last high school attended</description>
        <label>Last High School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Last High School Attended)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <description>[data entry or webform] - Transferred field from the Lead record</description>
        <label>Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Secondary_Email__c</fullName>
        <description>[manual entry] - Additional email address from the Lead record</description>
        <label>Lead Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <description>[data entry, webform, import] - Original lead source subtype</description>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian Studies Program</fullName>
                </value>
                <value>
                    <fullName>ASU Online</fullName>
                </value>
                <value>
                    <fullName>ASU Online Rover</fullName>
                </value>
                <value>
                    <fullName>AZ Public Employee Scholarship</fullName>
                </value>
                <value>
                    <fullName>CA Diversity</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of English</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of Physics</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of Psychology</fullName>
                </value>
                <value>
                    <fullName>College of Public Programs</fullName>
                </value>
                <value>
                    <fullName>Coll Technology &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Cronkite School-Journ/MassComm</fullName>
                </value>
                <value>
                    <fullName>Degree Search</fullName>
                </value>
                <value>
                    <fullName>EGSS Applying</fullName>
                </value>
                <value>
                    <fullName>EGSS Financing</fullName>
                </value>
                <value>
                    <fullName>EGSS GRE Prep</fullName>
                </value>
                <value>
                    <fullName>EGSS Personal Statement</fullName>
                </value>
                <value>
                    <fullName>Engineering - GOEE</fullName>
                </value>
                <value>
                    <fullName>Global Freshman Academy</fullName>
                </value>
                <value>
                    <fullName>Graduate College</fullName>
                </value>
                <value>
                    <fullName>Graduate Education</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GRE Subject</fullName>
                </value>
                <value>
                    <fullName>Health Solutions</fullName>
                </value>
                <value>
                    <fullName>Herberger Institute</fullName>
                </value>
                <value>
                    <fullName>Historical, Philosophical &amp; Religious Studies, Sch</fullName>
                </value>
                <value>
                    <fullName>Hugh Downs School of Human Communication</fullName>
                </value>
                <value>
                    <fullName>Idealist</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Info Session - Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>[Data Entry] - Link to the contacts Linked in page.</description>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>[Peoplesoft] - Examples include: Single, Married, Divorced, Unknown</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>[Peoplesoft] - An individual's middle name</description>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Veteran_Status__c</fullName>
        <description>[Peoplesoft] - SR1B	Veteran Verified, SR1C	Dependent of Veteran Verified, SR1D	Self-Identified Veteran or Dependent</description>
        <label>Military/Veteran Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Veteran Verified</fullName>
                </value>
                <value>
                    <fullName>Dependent of Veteran Verified</fullName>
                </value>
                <value>
                    <fullName>Self-Identified Veteran or Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Outlook_Change_Direction__c</fullName>
        <description>The direction of change between -2 (for null previous values) to 1 (for positive changes) for the students civitas persistence score</description>
        <label>Most Recent Outlook Change Direction</label>
        <summarizedField>Persistence_Outlook__c.Change_Direction__c</summarizedField>
        <summaryForeignKey>Persistence_Outlook__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>My_ASU_View_As_Student__c</fullName>
        <formula>HYPERLINK("https://webapp4.asu.edu/myasu/viewas?id=" &amp; ASURite_ID__c, "LINK to MyASU")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Directs to My ASU, Viewing as Student</inlineHelpText>
        <label>My ASU View As Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>[Manually entered] - Name that the contact goes by</description>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orient_Dt__c</fullName>
        <description>(Data Warehouse) ASUDW.OR_RESERVATIONS_V W.CREATEDDATETIME</description>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIN_lockout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[] - after student has 5 attempts, system automatically locks them out for an hour by checking the “PIN lockout” checkbox.</description>
        <label>PIN lockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <description>[Peoplesoft] - Email address for parents</description>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>[Peoplesoft] - Personal email address other than ASU Directory or Destination email addresses</description>
        <inlineHelpText>Personal non-ASU email address listed as Other in PeopleSoft</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Possible_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[manual] - Checkbox use for duplicate contact</description>
        <inlineHelpText>Please checkmark ALL Contact records when you identify matching information on multiple Contact records (not Lead records). Matching fields may include: email, street address, birthdate, first/last name, or phone number</inlineHelpText>
        <label>Possible Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>[Peoplesoft] - Student's Preferred email address in PeopleSoft</description>
        <inlineHelpText>Student's Preferred email address in PeopleSoft</inlineHelpText>
        <label>(DO NOT USE) Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prev_Cont_Prediction_Level__c</fullName>
        <description>The persistence outlook prediction level for the student before the most recent change.</description>
        <label>Previous Outlook level</label>
        <summarizedField>Persistence_Outlook__c.Prev_Cont_Prediction_Level__c</summarizedField>
        <summaryForeignKey>Persistence_Outlook__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recruiting_Email_Change_Date__c</fullName>
        <description>[Salesforce] - Automatically set to the current date and time when the Email or Recruiting Email is changed on a Lead record. Mapped to the Contact record to determine if the Contact Email is to be replaced by the Recruiting Email.</description>
        <inlineHelpText>Automatically set to the current date and time when the Email or Recruiting Email is changed on a Lead record. Mapped to the Contact record to determine if the Contact Email is to be replaced by the Recruiting Email.</inlineHelpText>
        <label>Recruiting Email Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rel_Parent_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>1st Parent's contact id from Relationship</description>
        <label>Rel Parent 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Rel Parent 1)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rel_Parent_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship Parent 2 contact Id</description>
        <label>Rel Parent 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Rel Parent 2)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rel_Relationship_Id_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship Id from Rel Parent 1</description>
        <label>Rel Relationship Id 1</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rel_Relationship_Id_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship Id from Rel Parent 2</description>
        <label>Rel Relationship Id 2</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Contacts (Rel Relationship Id 2)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religious_Preference__c</fullName>
        <description>[Peoplesoft] - Religious Preference</description>
        <label>Religious Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baha'I</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Buddhism</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Christian, Non-denominational</fullName>
                </value>
                <value>
                    <fullName>Christian-Disciples</fullName>
                </value>
                <value>
                    <fullName>Christian Reformed Church in America</fullName>
                </value>
                <value>
                    <fullName>Christian Science</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Church of Jesus Christ of Latter-Day Saints</fullName>
                </value>
                <value>
                    <fullName>Church of the Nazarene</fullName>
                </value>
                <value>
                    <fullName>Eastern Orthodox churches</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evangelical Lutheran Church in America</fullName>
                </value>
                <value>
                    <fullName>Hinduism</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Islam/Muslim/Moslem</fullName>
                </value>
                <value>
                    <fullName>Judaism</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Lutheran Church-Missouri Synod</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>None, no preference or affiliation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pentecostal</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Presbyterian Church (USA)</fullName>
                </value>
                <value>
                    <fullName>Reformed Church in America</fullName>
                </value>
                <value>
                    <fullName>Roman Catholic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Dashboard__c</fullName>
        <formula>HYPERLINK("https://webapp6.asu.edu/corda/dashboards/Retention/main.dashxml?tab_select=3&amp;profile_tab_select=1&amp;sf_search_emplid=" + EMPLID__c ,  FirstName + ' ' + LastName)</formula>
        <inlineHelpText>Only undergraduate students who are active for the current or a future term can be found in the Retention Dashboard.</inlineHelpText>
        <label>Retention Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAIS_Student_ID__c</fullName>
        <description>[Peoplesoft] - ADE generated student identifier</description>
        <label>SAIS Student ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEED_Eligible__c</fullName>
        <description>If contact has SEED student group on their record, shows true.</description>
        <formula>SEED_Student_Group_Count__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If contact has SEED student group on their record, shows true.</inlineHelpText>
        <label>SEED Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEED_Student_Group_Count__c</fullName>
        <description>[Peoplesoft] - A count of the total Student Group records where Status is True and PeopleSoft Code is FA01. Used to determine if this Contact should be flagged as a SEED participant.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is FA01. Used to determine if this Contact should be flagged as a SEED participant.</inlineHelpText>
        <label>SEED Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>FA01</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SEED__c</fullName>
        <formula>IF(SEED_Student_Group_Count__c &gt; 0, 
IMAGE('/resource/SEEDicon',"SEED Student",16,20), 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Birthdate_Updated__c</fullName>
        <label>SF.Birthdate Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Birthdate__c</fullName>
        <label>SF.Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_First_Name_Updated__c</fullName>
        <label>SF.First Name Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_First_Name__c</fullName>
        <label>SF.First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Last_Name_Updated__c</fullName>
        <label>SF.Last Name Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Last_Name__c</fullName>
        <label>SF.Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_Address_Updated__c</fullName>
        <label>SF.Mailing Address Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_City__c</fullName>
        <label>SF.Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_Country__c</fullName>
        <label>SF.Mailing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_State__c</fullName>
        <label>SF.Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_Street__c</fullName>
        <label>SF.Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Mailing_ZIP__c</fullName>
        <label>SF.Mailing ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Middle_Name_Updated__c</fullName>
        <label>SF.Middle Name Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Middle_Name__c</fullName>
        <label>SF.Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Mobile_Updated__c</fullName>
        <label>SF.Mobile Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Mobile__c</fullName>
        <label>SF.Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Phone__c</fullName>
        <description>Used for SMS campaigns. US phone numbers are 10 characters in length. International numbers are 15 characters in length. A validation rule will check to be sure there are only numeric characters in the field.</description>
        <inlineHelpText>Mobile number (digits only) for recruitment mass texting messages. Field represents an initial opt-in, contact must also opt in via text and may opt out at any time (text STOP in response), opt out status is tracked only in Silverpop, not visible here.</inlineHelpText>
        <label>SMS Mobile Phone Opt In</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_ACCT_ID__c</fullName>
        <description>MDM GUID</description>
        <inlineHelpText>MDM GUID</inlineHelpText>
        <label>MDM Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Athletics_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this contact have an athletics record?</description>
        <inlineHelpText>Does this contact have an athletics record?</inlineHelpText>
        <label>MDM Athletics Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Athletics_IDs__c</fullName>
        <description>Athletics ID</description>
        <inlineHelpText>Athletics ID</inlineHelpText>
        <label>MDM Athletics IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_CONTACT_ID__c</fullName>
        <description>MDM GUID Contact ID</description>
        <externalId>true</externalId>
        <inlineHelpText>MDM GUID Contact ID</inlineHelpText>
        <label>MDM Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_DimCustIDs__c</fullName>
        <description>Concatenated list of SSB internally assigned dimcustomer IDs.</description>
        <inlineHelpText>Concatenated list of SSB internally assigned dimcustomer IDs.</inlineHelpText>
        <label>MDM Customer IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Foundation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the contact have Foundation record?</description>
        <inlineHelpText>Does the contact have Foundation record?</inlineHelpText>
        <label>MDM Foundation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Foundation_IDs__c</fullName>
        <description>MDM Foundation ID</description>
        <inlineHelpText>MDM Foundation ID</inlineHelpText>
        <label>MDM Foundation IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_PeopleSoft_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the contact have a Peoplesoft flag?</description>
        <inlineHelpText>Does the contact have a Peoplesoft flag?</inlineHelpText>
        <label>MDM Peoplesoft Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_PeopleSoft_IDs__c</fullName>
        <description>EMPLID</description>
        <inlineHelpText>EMPLID</inlineHelpText>
        <label>MDM Peoplesoft IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_SSID_Winner__c</fullName>
        <description>Hierarchy winning record.</description>
        <inlineHelpText>Hierarchy winning record.</inlineHelpText>
        <label>MDM SSID Winner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Service_PIN__c</fullName>
        <description>[Salesforce] - Identifier to enable identify verification to facilitate student self-service</description>
        <label>Self-Service PIN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_Country_Code__c</fullName>
        <description>[Silverpop] - Mailing Country Code</description>
        <formula>TEXT(MailingCountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silverpop Mailing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_Country__c</fullName>
        <description>[Silverpop] - Mailing Country</description>
        <formula>MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silverpop Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_State_Code__c</fullName>
        <description>[Silverpop] - Formula field to display the Mailing State code, used in Silverpop integration.</description>
        <formula>TEXT(MailingStateCode)</formula>
        <label>Silverpop Mailing State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_State__c</fullName>
        <description>[Silverpop] - Formula field to display the contact's mailing state used for Silverpop integration.</description>
        <formula>MailingState</formula>
        <label>Silverpop Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Profile__c</fullName>
        <formula>IF( AND(NOT(ISBLANK(TEXT(Affiliation_Student__c))), RecordTypeId = "012d0000000wzM4"),
HYPERLINK('/apex/StudentProfileRedirect?studentId=' + EMPLID__c, 'Open', '_self'), NULL)</formula>
        <label>Student Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>[Peoplesoft] - Name Suffix</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr</fullName>
                </value>
                <value>
                    <fullName>Sr</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[manual entry] - Checkbox used to flag test records in production</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thunderbird_Student_Group_Count__c</fullName>
        <description>[Peoplesoft] - A count of the total Student Group records where Status is True and PeopleSoft Code is SRKJ. Used to determine if this Contact should be flagged as a Thunderbird student.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is SRKJ. Used to determine if this Contact should be flagged as a Thunderbird student.</inlineHelpText>
        <label>Thunderbird Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>SRKJ</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Thunderbird__c</fullName>
        <description>[Peoplesoft] - Displays an icon for a Thunderbird student. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is SRKJ.</description>
        <formula>IF(Thunderbird_Student_Group_Count__c &gt; 0, 
IMAGE("/resource/Thunderbird_icon","Thunderbird Student",20,20), 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays an icon for a Thunderbird Teach-out student. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is SRKJ.</inlineHelpText>
        <label>Thunderbird Teach-out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Documented US Citizen.</description>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <description>[Peoplesoft] - Confirmed Visa Type</description>
        <label>Visa Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>AR1</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
                <value>
                    <fullName>G5</fullName>
                </value>
                <value>
                    <fullName>H1</fullName>
                </value>
                <value>
                    <fullName>H1B</fullName>
                </value>
                <value>
                    <fullName>H1C</fullName>
                </value>
                <value>
                    <fullName>H2A</fullName>
                </value>
                <value>
                    <fullName>H2B</fullName>
                </value>
                <value>
                    <fullName>H3</fullName>
                </value>
                <value>
                    <fullName>H4</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>I9</fullName>
                </value>
                <value>
                    <fullName>I94</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WUE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student_Group__c.SG_PeopleSoft_Code__c = SG12</description>
        <label>WUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>[Peoplesoft] - Work phone number</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>